2004-11-11  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/canon/exif-mnote-data-canon.c: Do not crash on strange
	  data. Pointed out by Angela Wrobel.

2004-11-11  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/*: Replace another few realloc by exif_mem_realloc.
	  Pointed out by Angela Wrobel.

2004-11-10  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/*.c: Change #include "" to #include <>.
	* Makefile.am:
	* exif-result.h: Removed.

2004-11-10  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-tag.[c,h] (exif_tag_from_name): New. Suggested by
	  Angela Wrobel.

2004-11-10  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_data_free): Fix memleak found by 
	  Angela Wrobel.
	* contrib/watcom: Updated files contributed by Angela Wrobel.

2004-11-03  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-format.c: More translatable strings.

2004-11-02  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_fix): Detect more wrong stuff.
	* libexif/exif-data.c: Detect recursive calls.

2004-11-02  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-entry.c: added LZW
	* libexif/exif-tag.*: added few tags used by .NEF
	* libexif/exif-data.c: logging unknown tags

2004-10-20  Lutz Mueller <lutz@users.sourceforge.net>

	* Makefile.am: Add intl
	* configure.in: Add intl/Makefile. Now "make distcheck" works.

2004-10-18  Lutz Mueller <lutz@users.sourceforge.net>

	Patch by Krisztian VASAS <iron@ironiq.hu>:

	* configure.in: Create po/Makefile.in from po/Makefile.in.in

2004-10-16  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: We are now working on version 0.6.12.

2004-10-16  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: set CURRENT to 12. There have been quite a few
	  additions to the header files.

2004-10-16  Lutz Mueller <lutz@users.sourceforge.net>

	Martin Willers <willers@xm-arts.de> found an off-by-one error:
